# orceu-api-saas

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/endpoints/: clients.py  documents.py  imports.py  locations.py
app/application/common/clients/: schemas.py
app/application/common/clients/usecases/: __init__.py
app/application/common/imports/: excel_handler.py  schemas.py
app/application/common/locations/: schemas.py
app/application/common/locations/usecases/: __init__.py  list_locations.py
app/application/common/organizations/: schemas.py
app/application/common/organizations/usecases/: __init__.py
app/application/common/units/: schemas.py
app/application/common/units/usecases/: __init__.py
app/core/: auth.py  dependencies.py  queue.py
app/services/: estimate_parser.py  estimate_tree.py  storage_manager.py  supabase_manager.py
app/utils/: number.py
tests/api/v1/: test_imports.py  test_locations.py
