[tool.poetry]
name = "orceu-api-saas"
version = "0.1.0"
description = "orceu-api-saas é a API privada do SaaS Orceu, acessada exclusivamente pela aplicação web da organização (usuário autenticado via Supabase Auth)."
authors = ["darley-passarin <darleypass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
orceu-core = {path = "../orceu-core"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
